--- a/yoreclamo-web/build.gradle
+++ b/yoreclamo-web/build.gradle
@@ -24,12 +24,13 @@ repositories {
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
+configurations {
+    compile.exclude module: "spring-boot-starter-tomcat"
+}
 
 dependencies {
 
-	compile("org.springframework.boot:spring-boot-starter-web:1.2.5.RELEASE"){
-        exclude module: "spring-boot-starter-tomcat"
-    }
+	compile("org.springframework.boot:spring-boot-starter-web:1.2.5.RELEASE")
     compile("org.springframework.boot:spring-boot-starter-data-mongodb")
 	compile("org.springframework.boot:spring-boot-starter-jetty")
 	compile("org.springframework.boot:spring-boot-starter-freemarker")
